--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
     "presets": [
         [
-            "@babel/preset-env",
+            "@babel/env",
             {
-                "modules": false
+                "targets": {
+                    "node": "current"
+                }
             }
         ]
     ]
