--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.15",
     "style-loader": "^3.3.1",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "workbox-webpack-plugin": "^6.5.2"
   }
 }
