--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fast-sass-loader": "^2.0.1",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.15",
     "style-loader": "^3.3.1",
