--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "wp-nlp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Natural language processing web app via MeaningCloud API",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "serve": "nodemon src/server/index.js",
     "start": "node src/server/index.js",
     "build": "webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --config webpack.dev.js"
+    "dev": "webpack-dev-server --config webpack.dev.js",
+    "list-deps": "npm run ls"
   },
   "keywords": [],
   "author": "Mark J Rawlins",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
