--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "nodemon src/server/index.js",
     "start": "node src/server/index.js",
     "build": "webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --config webpack.dev.js",
+    "dev": "webpack-dev-server --config webpack.dev.js && src/server/index.js",
     "list-deps": "npm run ls"
   },
   "keywords": [],
