--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "nodemon src/server/index.js",
     "start": "node src/server/index.js",
     "build": "webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --config webpack.dev.js && src/server/index.js",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "list-deps": "npm run ls"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
+    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
