--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "nodemon src/server/index.js",
     "start": "node src/server/index.js",
     "build": "webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --config webpack.dev.js --open",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "list-deps": "npm run ls"
   },
   "keywords": [],
@@ -19,7 +19,7 @@
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "node-fetch": "^2.6.7",
-    "webpack": "^5.71.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
